@@ -3,6 +3,7 @@
 #importFrom(rjags,jags.model)
 #importFrom(rjags,coda.samples)
 
+importFrom(coda, "as.mcmc")
 
 exportClasses(
               "rjags"              
@@ -26,3 +27,4 @@ S3method("recompile", "rjags")
 S3method("plot", "rjags")
 S3method("print", "rjags")
 S3method("update", "rjags")
+S3method("as.mcmc", "rjags")
